fixed scrollbar

--- a/VCC_Projekt/Components/Layout/NavMenu.razor.css
+++ b/VCC_Projekt/Components/Layout/NavMenu.razor.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 2px 15px rgba(0,0,0,0.3);
+    overflow: hidden;
 }
 
 .navbar-brand-container {
@@ -169,6 +170,9 @@
         max-height: calc(100vh - 3.5rem);
         overflow-y: auto;
         transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .top-navbar {
+        position: absolute;
     }
 
     .navbar-toggler:not(:checked) ~ .nav-scrollable {
